frontend/src/views/Home/style.scss
@import '~src/styles/vars';

.home-header {
  background-image: url('~assets/mic.jpg');
  background-size: cover;

  height: 100%;
  width: 100%;
  background-position: center;
}

.home-header-center {
  padding-top: 40%;
  margin-left: 20%;
  color: $primary-text-color;

  h1 {
    letter-spacing: 18px;
    font-size: 4rem;
  }

  p {
    letter-spacing: 1.5px;
  }

  .actions {
    margin-top: 10vh;
  }
}

